--- a/views/pages/Test/TestSignUp.ejs
+++ b/views/pages/Test/TestSignUp.ejs
@@ -10,7 +10,8 @@
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" name="email" class="form-control" id="exampleInputEmail1"
+                               aria-describedby="emailHelp">
                         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
                 </div>
@@ -21,11 +22,10 @@
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">User Name</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" name="userName" >
+                        <input type="text" class="form-control" id="exampleInputEmail1" name="userName">
                     </div>
                 </div>
                 <div class="col-4"></div>
-
 
 
                 <div class="col-4"></div>
@@ -46,7 +46,6 @@
                     </div>
                 </div>
                 <div class="col-4"></div>
-
 
 
                 <div class="col-4"></div>
