Form validation added for test data

--- a/views/pages/Test/TestSignUp.ejs
+++ b/views/pages/Test/TestSignUp.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="bg-light">
-        <form action="/signup" method="post">
+        <form action="/validator" method="post">
             <div class="row">
 
 
