--- a/views/pages/Auth/signup.ejs
+++ b/views/pages/Auth/signup.ejs
@@ -10,8 +10,13 @@
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        <input type="email" name="email"
+                               value="<%= values.email ? values.email :'' %>"
+                               class="form-control <%= errors.email ? 'is-invalid' : '' %>"
+                               id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="invalid-feedback">
+                            <%= errors.email %>
+                        </div>
                     </div>
                 </div>
                 <div class="col-4"></div>
@@ -21,7 +26,13 @@
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">User Name</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" name="userName" >
+                        <input type="text"
+                               class="form-control <%= errors.userName ? 'is-invalid' : '' %>"
+                               value="<%= values.userName ? values.userName :'' %>"
+                               id="exampleInputEmail1" name="userName" >
+                        <div id="emailHelp" class="invalid-feedback">
+                            <%= errors.userName %>
+                        </div>
                     </div>
                 </div>
                 <div class="col-4"></div>
@@ -32,7 +43,13 @@
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+                        <input type="password" name="password"
+                               value="<%= values.password ? values.password :'' %>"
+                               class="form-control <%= errors.password ? 'is-invalid' : '' %>"
+                               id="exampleInputPassword1">
+                        <div id="emailHelp" class="invalid-feedback">
+                            <%= errors.password %>
+                        </div>
                     </div>
                 </div>
                 <div class="col-4"></div>
@@ -42,7 +59,10 @@
                 <div class="col-4">
                     <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
-                        <input type="password" name="confirmPassword" class="form-control" id="exampleInputPassword1">
+                        <input type="password" name="confirmPassword" class="form-control <%= errors.confirmPassword ? 'is-invalid' : '' %>" id="exampleInputPassword1">
+                        <div id="emailHelp" class="invalid-feedback">
+                            <%= errors.confirmPassword %>
+                        </div>
                     </div>
                 </div>
                 <div class="col-4"></div>
