--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,12 +11,21 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
+                <% if (isLogged){%>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/dashboard" tabindex="-1">dashboard</a>
+                    </li>
+                <%}else {%>
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/signup" tabindex="-1">Signup</a>
                 </li>
+                <% } %>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
