--- a/views/pages/Test/TestSignUp.ejs
+++ b/views/pages/Test/TestSignUp.ejs
@@ -71,6 +71,10 @@
 
 
 <%- include('../../partials/footer.ejs') %>
+<script>
+    const asd = <%- JSON.stringify(message) %>
+    console.log(asd.error)
+</script>
 
 </body>
 </html>
