--- a/views/partials/AlertBox.ejs
+++ b/views/partials/AlertBox.ejs
@@ -3,11 +3,11 @@
         <div class="col-3"></div>
         <div class="col-6">
             <% if(message.error){%>
-                <div class="alert alert-danger" role="alert">
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
                     <%= message.error[0] %>
                 </div>
             <% }else if(message.success){%>
-                <div class="alert alert-success" role="alert">
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
                     <%= message.success[0] %>
                 </div>
             <% }%>
