--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,6 +26,9 @@
                     <a class="nav-link" href="/signup" tabindex="-1">Signup</a>
                 </li>
                 <% } %>
+                <li class="nav-item">
+                    <a class="nav-link" href="/validator" tabindex="-1">validator</a>
+                </li>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
